--- a/panamcham-ai.html
+++ b/panamcham-ai.html
@@ -349,11 +349,11 @@
                 <p>Esperamos que esta formación les sea útil para liderar la transformación digital con IA.</p>
                 <div style="margin-top: 30px; padding: 20px; border: 1px dashed var(--dell-blue-300); background-color: rgba(0,0,0,0.1);">
                     <div style="display: flex; justify-content: center; align-items: center; gap: 32px; flex-wrap: wrap;">
-                        <img src="https://panamcham.com/sites/default/files/logo.png" alt="Panamcham Logo" style="height: 90px; background-color: white; padding: 10px; border-radius: 5px;">
+                        <a href="https://panamcham.com/" target="_blank" style="color:var(--dell-blue-100);">
+                            <img src="https://panamcham.com/sites/default/files/logo.png" alt="Panamcham Logo" style="height: 90px; background-color: white; padding: 10px; border-radius: 5px;">
+                        </a>
                         <div id="qrcode" style="display: flex; justify-content: center; margin-top: 0;"></div>
                     </div>
-                    <p style="text-align: center; color: var(--dell-blue-200); font-size: 0.8em; margin-bottom: 5px; margin-top: 15px;">Más información en:</p>
-                    <p style="text-align: center; font-size: 0.7em;"><a href="https://panamcham.com/" target="_blank" style="color:var(--dell-blue-100);">https://panamcham.com/</a></p>
                 </div>
                 <div style="display: flex; justify-content: center; align-items: center; margin-top: 30px;">
                     <canvas id="score-chart" width="120" height="120" style="margin-right: 24px;"></canvas>
