--- a/panamcham-ai.html
+++ b/panamcham-ai.html
@@ -298,7 +298,7 @@
                 </ul>
                 <p><strong>Actividades:</strong> Ideación en grupos, roadmap de implementación, análisis de ROI, identificación de casos de uso.</p>
                 <p><strong>Entregables:</strong> Propuesta de caso de uso, cronograma de 6 meses, lista de recursos.</p>
-                <p style="margin-top: 10px; font-size: 0.7em;"><strong>Metodologías:</strong> <a href="https://www.microsoft.com/en-us/ai/ai-for-good" target="_blank">Microsoft AI for Good</a> | <a href="https://www.crisp-dm.org/" target="_blank">CRISP-DM</a> | <a href="https://aws.amazon.com/ai/machine-learning/" target="_blank">AWS ML Solutions</a></p>
+                <p style="margin-top: 10px; font-size: 0.7em;"><strong>Metodologías:</strong> <a href="https://www.microsoft.com/en-us/ai/ai-for-good" target="_blank">Microsoft AI for Good</a> | <a href="https://www.datascience-pm.com/crisp-dm-2/" target="_blank">CRISP-DM</a> | <a href="https://aws.amazon.com/ai/machine-learning/" target="_blank">AWS ML Solutions</a></p>
             </section>
             <!-- Slide extra: ¿Por qué IA ahora? -->
             <section>
