--- a/panamcham-ai.html
+++ b/panamcham-ai.html
@@ -269,7 +269,7 @@
                     <li><strong>Gemelos digitales:</strong> Simulación virtual de procesos.</li>
                 </ul>
                 <p><strong>Beneficios:</strong> Reducción de costos, eficiencia energética, menos inactividad.</p>
-                <p style="margin-top: 10px; font-size: 0.7em;"><strong>Plataformas:</strong> <a href="https://azure.microsoft.com/en-us/solutions/industry/manufacturing/" target="_blank">Azure IoT</a> | <a href="https://www.ge.com/digital/predix" target="_blank">GE Predix</a> | <a href="https://www.siemens.com/global/en/products/automation/topic-areas/digital-enterprise.html" target="_blank">Siemens Digital Enterprise</a></p>
+                <p style="margin-top: 10px; font-size: 0.7em;"><strong>Plataformas:</strong> <a href="https://www.microsoft.com/en-us/industry/manufacturing/industrial-transformation" target="_blank">Azure IoT</a> | <a href="https://www.ge.com/digital/predix" target="_blank">GE Predix</a> | <a href="https://www.siemens.com/global/en/products/automation/topic-areas/digital-enterprise.html" target="_blank">Siemens Digital Enterprise</a></p>
             </section>
             <!-- Slide 10: Gobernanza de Datos -->
             <section>
