--- a/panamcham-ai.html
+++ b/panamcham-ai.html
@@ -221,7 +221,7 @@
             <!-- Slide: Interactivo pregunta sobre PDF -->
             <section>
                 <h2>IA responde a documentación</h2>
-                <p>Simula que tienes acceso al PDF <a href="https://reports.weforum.org/docs/WEF_Artificial_Intelligence_for_Efficiency_Sustainability_and_Inclusivity_in_TradeTech_2025.pdf" target="_blank">WEF: AI Sustainability</a>. Haz clic para ver cómo una IA respondería a una pregunta clave:</p>
+                <p>El siguiente PDF del World Economic Forum (<a href="https://reports.weforum.org/docs/WEF_Artificial_Intelligence_for_Efficiency_Sustainability_and_Inclusivity_in_TradeTech_2025.pdf" target="_blank">ver informe</a>) analiza el impacto de la IA en el comercio internacional. A continuación, la IA responderá una pregunta basada en este documento.</p>
                 <div style="margin: 18px 0; background: rgba(255,255,255,0.08); padding: 16px; border-radius: 6px; color: #D9F5FD;">
                     <strong>Pregunta:</strong> ¿Cómo puede la IA contribuir a la sostenibilidad en el comercio internacional?
                 </div>
