Fix scoring system panamcham-ai.html

--- a/panamcham-ai.html
+++ b/panamcham-ai.html
@@ -348,7 +348,7 @@
             </section>
             <!-- Slide 3: Pregunta 1 -->
             <section data-background-color="var(--dell-blue-800)" style="top: 28.5px; display: none;" class="has-dark-background past" hidden="" aria-hidden="true">
-                <div class="question answered-correct">
+                <div class="question">
                     <p>¿Cuál es el principal beneficio de la IA en los negocios?</p>
                     <button onclick="showFeedback(this, false, 'La IA puede reducir costos, pero su principal valor está en generar nuevas oportunidades de negocio y mejorar la toma de decisiones estratégicas.')" class="">Reducir costos</button>
                     <button onclick="showFeedback(this, true, 'Exactamente. La IA automatiza tareas rutinarias, liberando tiempo humano para actividades de mayor valor, mejora la precisión en decisiones y descubre patrones ocultos en los datos que impulsan la innovación.')" class="">Automatizar procesos y mejorar decisiones</button>
@@ -368,7 +368,7 @@
             </section>
             <!-- Slide 5: Pregunta 2 -->
             <section data-background-color="var(--dell-blue-800)" style="top: 31px; display: none;" class="has-dark-background past" hidden="" aria-hidden="true">
-                <div class="question answered-correct">
+                <div class="question">
                     <p>¿Cuál de estos es un principio clave de la IA Responsable?</p>
                     <button onclick="showFeedback(this, false, 'La opacidad es lo contrario de lo que buscamos en IA responsable. Necesitamos transparencia para entender cómo toman decisiones los sistemas de IA. Sin esta visibilidad, no podemos confiar en las decisiones automatizadas, especialmente en sectores críticos como salud, finanzas o justicia donde las decisiones de IA pueden tener impactos significativos en la vida de las personas.')" class="">Opacidad</button>
                     <button onclick="showFeedback(this, true, 'Correcto. La transparencia es fundamental para la IA responsable porque permite que usuarios, reguladores y stakeholders entiendan cómo funciona el sistema, qué datos utiliza, cómo llega a sus conclusiones y si existe algún sesgo. Esta explicabilidad genera confianza, facilita la auditoría y permite la mejora continua del sistema.')" class="">Transparencia</button>
@@ -403,7 +403,7 @@
             </section>
             <!-- Slide 8: Pregunta 3 -->
             <section data-background-color="var(--dell-blue-800)" style="top: 11.5px; display: none;" class="has-dark-background past" hidden="" aria-hidden="true">
-                <div class="question answered-correct">
+                <div class="question">
                     <p>¿Cuál de los siguientes es un ejemplo de modelo de IA Generativa?</p>
                     <button onclick="showFeedback(this, false, 'Excel es una herramienta de hoja de cálculo tradicional que no utiliza modelos generativos de IA, aunque las versiones más recientes pueden integrar funciones de IA como asistentes para análisis de datos. Sin embargo, Excel en sí mismo es software de productividad, no un modelo de inteligencia artificial generativa.')" class="">Excel</button>
                     <button onclick="showFeedback(this, true, 'Exacto. GPT (Generative Pre-trained Transformer) es un modelo de IA generativa que puede crear texto coherente y natural a partir de instrucciones o prompts. Utiliza arquitectura transformer y ha sido entrenado en enormes datasets de texto para aprender patrones del lenguaje y generar respuestas contextualmente relevantes, siendo uno de los ejemplos más conocidos de esta tecnología.')" class="">GPT</button>
