Add AI Icon to UsecaseButtom panamcham-ai.html

--- a/panamcham-ai.html
+++ b/panamcham-ai.html
@@ -231,6 +231,13 @@
             transform: scale(0.97);
             box-shadow: 0 1px 4px rgba(6,114,203,0.12);
         }
+
+        .aiUsecaseButtom::before {
+            content: '✨';
+            font-size: 1em;
+            margin-right: 8px;
+            vertical-align: top;
+        }
     </style>
 </head>
 <body>
